# Azure_Kinect_ROS_Driver

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  azure-pipelines.yml  nodelet_plugins.xml  package.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request--enhancement-.md
.github/workflows/: linux_ROS1.yaml  linux_ROS2.yaml  main.yml  windows_ROS2.yaml
ci/: defaults.yaml  deps.rosinstall  environment.yaml  toolchain.cmake
cmake/: FindModuleHelpers.cmake  Findk4a.cmake  Findk4abt.cmake  Installk4a.cmake  azure-kinect-sensor-sdk-config-version.cmake  azure-kinect-sensor-sdk-config.cmake  azure-kinect-sensor-sdk-install.cmake  k4a-install.cmake
docs/: building.md  releasing.md  usage.md
include/azure-kinect-ros-driver/: k4a.hpp  k4a_calibration_transform_data.h  k4a_ros_bridge_nodelet.h  k4a_ros_device.h  k4a_ros_types.h
include/azure_kinect_ros_driver/: k4a.hpp  k4a_calibration_transform_data.h  k4a_ros_bridge_nodelet.h  k4a_ros_device.h  k4a_ros_device_params.h  k4a_ros_types.h
launch/: driver.launch  driver.launch.py  driver_with_bodytracking.launch  kinect_rgbd.launch  rectify_test.launch  slam_rtabmap.launch
meshes/: azure_collision.dae  collision.dae  model.blend  model.blend1  stand_collision.dae  stand_visual.dae  visual.dae
src/: body_tracking_tf_broadcaster.cpp  body_tracking_tf_broadcaster.py  k4a_calibration_transform_data.cpp  k4a_ros_bridge_node.cpp  k4a_ros_bridge_nodelet.cpp  k4a_ros_device.cpp  k4a_ros_device_params.cpp
urdf/: azure_kinect.urdf  azure_kinect.urdf.xacro  azure_kinect_macro.urdf.xacro  azure_kinect_new.urdf.xacro  azure_kinect_standalone.urdf.xacro
